force-app/main/default/objects/AWS_Configuration__c/AWS_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AWS Configuration</label>
</CustomObject>