force-app/main/default/objects/AWS_Configuration__c/fields/AWS_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Secret_Key__c</fullName>
    <label>AWS Secret Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>