force-app/main/default/objects/AWS_Configuration__c/fields/Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Name__c</fullName>
    <label>Bucket Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>