force-app/main/default/objects/AWS_Configuration__c/fields/Delete_after_Sync__c.field-meta.xml
<CustomField>
    <fullName>Delete_after_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete after Sync</label>
    <type>Checkbox</type>
</CustomField>