force-app/main/default/objects/AWS_Configuration__c/fields/Enable_Sync__c.field-meta.xml
<CustomField>
    <fullName>Enable_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Sync</label>
    <type>Checkbox</type>
</CustomField>