force-app/main/default/objects/AWS_Configuration__c/fields/Log_Errors_To__c.field-meta.xml
<CustomField>
    <fullName>Log_Errors_To__c</fullName>
    <label>Log Errors To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>