force-app/main/default/objects/AWS_Configuration__c/fields/Max_File_Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Size_Bytes__c</fullName>
    <label>Max File Size (Bytes)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>